# SMR

./: README.md  smr_rewrite.cpp
destor-smr/: .tags  .tags_sorted_by_file  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.scan  destor  destor.config  readme.txt  rebuild
destor-smr/src/: .tags  .tags_sorted_by_file  Makefile  Makefile.am  Makefile.in  ae_chunking.cpp  assembly_restore.cpp  backup.h  bloom_filter.cpp  cap_rewrite.cpp  chunk_phase.cpp  cma.cpp  config.cpp  containerstore.cpp  containerstore.h  dedup_phase.cpp  destor.h  do_restore.cpp  filter_phase.cpp  hash_phase.cpp  index.cpp  index.h  index_buffer.h  jcr.cpp  jcr.h  kvstore.cpp  kvstore.h  kvstore_htable.cpp  libhashfile.cpp  ned_rewrite.cpp  read_fsl_trace.cpp  read_phase.cpp  recipestore.cpp  restore.h  restore_aware.cpp  rewrite_phase.cpp  rewrite_phase.h  sampling_method.cpp  sds.cpp  sds.h  (+4 more)
destor-smr/src/.deps/: ae_chunking.Po  assembly_restore.Po  bloom_filter.Po  cap_rewrite.Po  cbr_rewrite.Po  cfl_rewrite.Po  chunk_phase.Po  cma.Po  config.Po  containerstore.Po  dedup_phase.Po  destor.Po  do_backup.Po  do_delete.Po  do_restore.Po  filter_phase.Po  fingerprint_cache.Po  har_rewrite.Po  hash_phase.Po  index.Po  jcr.Po  kvstore.Po  kvstore_htable.Po  libhashfile.Po  lru_cache.Po  ned_rewrite.Po  optimal_restore.Po  queue.Po  rabin_chunking.Po  read_fsl_trace.Po  read_phase.Po  recipestore.Po  restore_aware.Po  rewrite_phase.Po  sampling_method.Po  sds.Po  segmenting_method.Po  serial.Po  similarity_detection.Po  smr_rewrite.Po  (+2 more)
(+25 files in other folders)
